# dots

./: .axiom.toml  .gitignore  .gitmodules  .sops.yaml  2025-01-29 nix-darwin-configuration-analysis -- type_memory.md  2025-10-02 htz-relay.PLAN.md  2025-11-06 tmux-statusbar.PLAN.md  2025-11-16 r56-desktop-fixes.md  2025-12-03_axiom-deploy-annotation.PLAN.md  2025-12-05_hyprland-plugins.PLAN.md  2025-12-07_quickshell-bar.PLAN.md  AGENT.MD  AGENTS.md  AGENT_GUIDES_INTEGRATION.md  CLAUDE.md  DEBUG_PYPL_DAEMON.md  DESKTOP_MENUBAR_VISION.md  FOUNDATION.md  GO_MIGRATION.md  IMPLEMENTATION_COMPLETE.md  MIGRATION_COMPLETE.md  NIXOS_INSTALLATION.md  PYTHON_MIGRATION.md  README.md  SECRETS.md  action-plan.md  axiom.toml  cookies.txt  current-macos-preferences.md  fix-path-and-migrate-tier2.sh  flake.nix  home.nix  homebrew-migration-assessment.md  homebrew-phase4-assessment.md  migration-status-summary.md  needs-revisiting.md  neovim.nix  nodejs-migration-guide.md  phase4-assessment.md  phase4b-gui-apps-migration-summary.md  (+16 more)
2025-12-27 lgo-z2e setup/: .plan.md  INSTALL.md
asahi-nixos/: flake.nix
bun/: global-package.json
bundles/: base.nix  desktop.nix  dev.nix  dev.sync-conflict-20251202-162848-HPMO7GH.nix  headless-darwin.nix  headless-linux.nix  headless.nix
config/: global-agents.md  ignore-common  rgignore  stignore  zen-stignore
hardware/: desktop.nix  r56.nix  windows-pc-new-boot.nix  windows-pc.nix
iso/: lgo-z2e-installer.nix
modules/: primary-user.nix  syncthing.nix
nixos-vm/: BUILD_STATUS.md  README.md  VALIDATION_REPORT.md  VM_SETUP.md  configuration.nix  flake.nix  hardware.nix  home.nix  run-vm.sh  smoke-test.sh
overlays/: README.md  default.nix  hyprland-plugins.nix  libplist-darwin.nix  quickshell.nix  unstable.nix  whisper-cpp-cuda.nix  zmx.nix
pnpm/: pnpm-workspace.yaml
result/: activate  activate-user  darwin-version  darwin-version.json
scripts/: download-media.sh  scrub-history.sh  yt_transcript.sh
system/: audio.nix  authorized-keys.nix  auto-upgrade.nix  bluetooth.nix  cmux.nix  code-server.nix  deploy-annotate.nix  fan-control.nix  flatpak.nix  fonts.nix  homebrew.nix  hwmon-metrics.nix  kanata.nix  login.nix  macos-defaults.nix  nh.nix  nix-ld.nix  nix.nix  nvidia.nix  rustdesk.nix  sleepless.nix  sops.nix  ssh.nix  syncthing-automerge.nix  syncthing-darwin.nix  syncthing-linux.nix  syncthing.nix  syncthing.sync-conflict-20251202-160314-6QPGO5Z.nix  vector.nix  (+2 more)
uv-global/: pyproject.toml
uv-global/whisp/: IMPLEMENTATION_PLAN.md  SPEC.md  __init__.py  __main__.py  align.py  align_test.py  app.py  app_test.py  cli.py  cli_test.py  diarize_pyannote.py  diarize_pyannote_test.py  errors.py  filename.py  filename_test.py  format_md.py  format_md_test.py  integration_test.py  io.py  io_test.py  models.py  segment.py  segment_test.py  timefmt.py  timefmt_test.py  transcribe_fw.py  transcribe_fw_test.py  validate.py  validate_test.py
uv-global/whisp/scripts/ralph/: progress.txt
(+448 files in other folders)
