[project]
name = "uv-global"
version = "0.1.0"
description = "global python tools managed via uv"
requires-python = ">=3.12"

dependencies = [
  "faster-whisper",
  "pyannote.audio",
  "torch",
]

[tool.uv]
environments = [
  "sys_platform == 'darwin' and platform_machine == 'arm64'",
  "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"

[tool.uv.sources]
# linux uses cuda index, darwin uses default pypi (has MPS support)
torch = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux'" },
  { index = "pypi", marker = "sys_platform == 'darwin'" },
]
