[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["whisp"]

[project]
name = "uv-global"
version = "0.1.0"
description = "global python tools managed via uv"
requires-python = ">=3.12"

dependencies = [
  "faster-whisper",
  "pyannote.audio",
]

[project.scripts]
whisp = "whisp.__main__:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["whisp"]
python_files = ["*_test.py"]
python_functions = ["test_*"]

[project.optional-dependencies]
cu121 = ["torch"]
cpu = ["torch"]

[tool.uv]
package = true
environments = [
  "sys_platform == 'darwin' and platform_machine == 'arm64'",
  "sys_platform == 'linux' and platform_machine == 'x86_64'",
]
conflicts = [
  [{ extra = "cu121" }, { extra = "cpu" }],
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu121", extra = "cu121", marker = "sys_platform == 'linux'" },
  { index = "pytorch-cpu", extra = "cpu", marker = "sys_platform == 'linux'" },
]
